Particle Edit mode Add brush with a radius > 181px crashes #78415

Closed
opened 2020-06-29 02:30:33 +02:00 by Andrew Price · 9 comments

System Information
Operating system: Win 10 64 bit
Graphics card: Dual Titan RTX

Blender Version
Broken: Blender 2.83.0

Short description of error
Adding hair in Particle Edit causes crashes randomly

Exact steps for others to reproduce the error

  1. Open this .blend: manII_5_export.blend
  2. In Particle Edit mode, try adding some hairs. You may need to change a few settings (count, brush size etc.). Eventually it will crash for seemingly no reason.

Video of it happening:
crashing in particle edit mode.mp4

**System Information** Operating system: Win 10 64 bit Graphics card: Dual Titan RTX **Blender Version** Broken: Blender 2.83.0 **Short description of error** Adding hair in Particle Edit causes crashes randomly **Exact steps for others to reproduce the error** 1. Open this .blend: [manII_5_export.blend](https://archive.blender.org/developer/F8652491/manII_5_export.blend) 2. In Particle Edit mode, try adding some hairs. You may need to change a few settings (count, brush size etc.). Eventually it will crash for seemingly no reason. Video of it happening: [crashing in particle edit mode.mp4](https://archive.blender.org/developer/F8652514/crashing_in_particle_edit_mode.mp4)
Author

Added subscriber: @AndrewPrice

Added subscriber: @AndrewPrice

Added subscriber: @bent

Added subscriber: @bent
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm (at least in this file), checking...

Can confirm (at least in this file), checking...
Philipp Oeser self-assigned this 2020-06-29 11:13:09 +02:00
Member

This one seems to be a long-standing issue with the Add brush (is in 2.79 even).
Using the particle Add brush with a radius > 181px will result in a freeze (hangs in brush_add_count_iter due to short overflow.)

Fix incoming...

This one seems to be a long-standing issue with the `Add` brush (is in 2.79 even). Using the particle `Add` brush with a radius > 181px will result in a freeze (hangs in `brush_add_count_iter` due to short overflow.) Fix incoming...
Philipp Oeser changed title from Particle Edit mode causes frequent crashes while adding hairs to Particle Edit mode Add brush with a radius > 181px crashes 2020-06-29 11:15:05 +02:00

This issue was referenced by 2def6f5568

This issue was referenced by 2def6f5568ee76a56a139799116c67cdcfc19814
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Whoa that was fast! Thanks so much Philipp.

I tested it in 2.83.1 (didn't realize there was an update) and it hasn't hanged yet. But glad you've committed a fix. Hopefully it's gone for good :)

Whoa that was fast! Thanks so much Philipp. I tested it in 2.83.1 (didn't realize there was an update) and it hasn't hanged yet. But glad you've committed a fix. Hopefully it's gone for good :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78415
No description provided.