Fix T78415: Particle Edit mode Add brush with a radius > 181px crashes

Caused by short overflow, change to int instead.

Maniphest Tasks: T78415

Differential Revision: https://developer.blender.org/D8148